# homelab-kubernetes-home-infrastructure

./: .conform.yaml  .eslintrc.json  .gitignore  .gitlab-ci.yml  .golangci.yml  .pre-commit-config.yaml  .versionrc.json  .yamllint  Makefile  Pulumi.dev.yaml  Pulumi.muc.yaml  Pulumi.prod.yaml  Pulumi.vie.yaml  Pulumi.yaml  README.md  eslint.config.js  eslint.config.mjs  go.mod  go.sum  main.go  package.json  renovate.json  tsconfig.json
.github/workflows/: codeql.yml  dependency_review.yml  pipeline.yml  pr.yml  scorecard.yml  update_flux.yml
assets/: ansible.yml.j2  vendor-config.yml
assets/helm/: argocd.yml.j2  cilium.yml.j2  install.sh
assets/home_assistant/firehose/processor/: .gitignore  processor.py  pyproject.toml
assets/k0sctl/: apply.sh  delete.sh  k0sctl.yml.j2  kubeconfig.sh
assets/talos/: apply.sh  controlplane.yml.j2  noop.sh  talosconfig.j2  talosconfig.sh.j2  upgrade_k8s.sh  upgrade_talos.sh  validate.sh
assets/vault/: app_role.sh
cluster-bootstrap/app-of-apps/: app-of-apps.yaml
cluster-bootstrap/flux-system/: gotk-sync.yaml  kustomization.yaml
cluster-bootstrap/muc/: kustomization.yaml
cluster-bootstrap/muc/app-of-apps/: app-of-apps.yaml
cluster-bootstrap/muc/flux-system/: gotk-sync.yaml  kustomization.yaml
cluster-bootstrap/vie/app-of-apps/: kustomization.yaml
cluster-bootstrap/vie/flux-system/: gotk-sync.yaml
pkg/lib/buckets/: hmac.go  index.go  service_account.go
pkg/lib/certmanager/: index.go
pkg/lib/cilium/: index.go
pkg/lib/config/: index.go
pkg/lib/externaldns/: index.go
pkg/lib/flux/: index.go  secret.go  serviceaccount.go
pkg/lib/homeassistant/: index.go
pkg/lib/influxdb/: index.go
pkg/lib/kubernetes/: index.go
pkg/lib/passwords/: index.go
pkg/lib/talos/: healthcheck.go  index.go  install.go  provider.go  upgrade.go
pkg/model/cluster/: data.go
pkg/util/file/: upload.go
pkg/util/random/: number.go
src/: index.ts
src/lib/: configuration.ts
src/lib/argocd/: index.ts  secrets.ts
src/lib/buckets/: index.ts
src/lib/cert_manager/: index.ts
src/lib/cilium/: index.ts
src/lib/cloudnative_pg/: index.ts
src/lib/cluster/: index.ts  k0sctl.ts  servers.ts
src/lib/external_dns/: index.ts
src/lib/flux/: index.ts  secrets.ts  service_account.ts
src/lib/frigate/: google.ts  index.ts
src/lib/github/: repository.ts  ssh_key.ts
src/lib/home_assistant/: athena.ts  backup.ts  delivery.ts  emqx.ts  firehose.ts  gcp.ts  glue.ts  google.ts  grafana.ts  index.ts  influxdb.ts  node_red.ts  telegraf.ts
src/lib/influxdb/: index.ts
src/lib/ksops/: index.ts
src/lib/kubernetes/: provider.ts
src/lib/passwords/: index.ts
src/lib/proxmox/: create.ts
src/lib/server/: create.ts
src/lib/talos/: files.ts  index.ts  install.ts  post_install.ts  upgrade.ts
src/lib/util/: base64.ts  create_dir.ts  file.ts  hash.ts  random.ts  sort.ts  ssh_key.ts  storage.ts  string.ts  template.ts
src/lib/velero/: index.ts
src/model/: cluster.ts  map.ts  random.ts  server.ts
src/model/aws/: athena_workgroup_data.ts  iam_user_data.ts
src/model/config/: argocd.ts  bucket.ts  cilium.ts  cluster_integration.ts  gates.ts  gcp.ts  google.ts  home_assistant.ts  k0s.ts  network.ts  password.ts  proxmox.ts  secret_stores.ts  server.ts  talos.ts  ufw.ts
(+50 files in other folders)
