[build-system]
requires = [
    "poetry-core"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "homelab-home-assistant-firehose-processor"
version = "0.0.0"
description = "Lambda Processor for transforming Home Assistant data in an Amazon Kinesis Data Firehose stream."
license = "MIT"
authors = [
    "Daniel Muehlbachler-Pietrzykowski <daniel.muehlbachler@niftyside.io>"
]
repository = "https://github.com/muhlba91/homelab-kubernetes-home-infrastructure"
keywords = [
    "home-assistant",
    "kinesis-firehose-processor",
    "homelab"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Home Automation"
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
ruff = "^0.2.0"
